@@ -16,14 +16,14 @@ EBUILD enchant-1.1.6.ebuild 867 RMD160 79d33b5909a6585b77b064f30201cbe83f4039bd 
 MD5 47d7fe53aa3d164e5e776bc76939caaf enchant-1.1.6.ebuild 867
 RMD160 79d33b5909a6585b77b064f30201cbe83f4039bd enchant-1.1.6.ebuild 867
 SHA256 fcf93506cd10477b5043cd596119b167a0e1ace8498ce2685ce017cf5e1db7bd enchant-1.1.6.ebuild 867
-EBUILD enchant-1.2.5.ebuild 1003 RMD160 bd92a479126d6ed8ad5a2223859eea49c8bb8237 SHA1 7ad30499e77e4275f1165f1cc8684428b696bfab SHA256 279af616c6c9433b964cdb633a7fd63408f547d16ee71695509d44d14ee15804
-MD5 fa112b4cf189f8f89d1a3ce5f411a8ba enchant-1.2.5.ebuild 1003
-RMD160 bd92a479126d6ed8ad5a2223859eea49c8bb8237 enchant-1.2.5.ebuild 1003
-SHA256 279af616c6c9433b964cdb633a7fd63408f547d16ee71695509d44d14ee15804 enchant-1.2.5.ebuild 1003
-MISC ChangeLog 7055 RMD160 f5f144e25cac314425535d46ee8340964a424859 SHA1 37d51e6c98e0e6bac89b464d04bf5763a9ee613f SHA256 c488e1d3b9d1bce8787bfd310a9b447ee42678a485b41fc9e3882a8dd2fa35ae
-MD5 b687f868c1ce2551964469c9040622e8 ChangeLog 7055
-RMD160 f5f144e25cac314425535d46ee8340964a424859 ChangeLog 7055
-SHA256 c488e1d3b9d1bce8787bfd310a9b447ee42678a485b41fc9e3882a8dd2fa35ae ChangeLog 7055
+EBUILD enchant-1.2.5.ebuild 1185 RMD160 82e2523be23756fabdf6e5ee5f915121868e9001 SHA1 b67e9be38253a25a95d7e59cd7ef0ee60177984d SHA256 d2e099852902e670ed8edfc581a8f3cf89916d5409917db31e368fb66fa0c485
+MD5 3f69b796f32a68355c765e11e91bc3d9 enchant-1.2.5.ebuild 1185
+RMD160 82e2523be23756fabdf6e5ee5f915121868e9001 enchant-1.2.5.ebuild 1185
+SHA256 d2e099852902e670ed8edfc581a8f3cf89916d5409917db31e368fb66fa0c485 enchant-1.2.5.ebuild 1185
+MISC ChangeLog 7205 RMD160 e9f6eecb614f190a4f7b631c219c6f331a4aab4c SHA1 2029028efc4e782227b34e549d0ddd261a8552cf SHA256 ca67266688b28e91757f2ccef633f9bf60fc00a03113449696573000c6ca1043
+MD5 5059d0ea7d07a56751f9c99e84c7d14e ChangeLog 7205
+RMD160 e9f6eecb614f190a4f7b631c219c6f331a4aab4c ChangeLog 7205
+SHA256 ca67266688b28e91757f2ccef633f9bf60fc00a03113449696573000c6ca1043 ChangeLog 7205
 MISC metadata.xml 165 RMD160 46d22302656e49f090e45d3c10f90c4e16f75877 SHA1 7fc9c8a1bf4ba6ea2047d4fa8046e13a2abd6b82 SHA256 9e51028c1f6811ec63067385fb8d6cb393d04b1a1d6688e0bbeb368ef34d57a0
 MD5 3b7f9b4ae874f21ec05137f8038bdd69 metadata.xml 165
 RMD160 46d22302656e49f090e45d3c10f90c4e16f75877 metadata.xml 165
@@ -40,7 +40,7 @@ SHA256 f4cd2f65079fdc0fd21f54c06a7e42ebc919f625c47fa505a9b9b99fc9c65092 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFmm3mAiZjviIA2XgRAgNWAKDi4J8swoALVP3QjvTV05jU8CDk1ACeMuIY
-qNrFbFGPfYxNHZGk0/6KGTU=
-=YUw2
+iD8DBQFFmpKnAiZjviIA2XgRAoseAJ9WMTBnEobAVE0O41pm7T/okltDlACfb1Bc
+CFAeZoeh7UXFnILUvFthayA=
+=/x4u
 -----END PGP SIGNATURE-----
